WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83453
[mac] REGRESSION (
r113467
): Some canvas tests are failing in WebKit1 when run after compositing/tiled-layers-hidpi.html
https://bugs.webkit.org/show_bug.cgi?id=83453
Summary
[mac] REGRESSION (r113467): Some canvas tests are failing in WebKit1 when run...
mitz
Reported
2012-04-08 21:39:58 PDT
[mac] REGRESSION (
r113467
): Some canvas tests are failing in WebKit1 when run after compositing/tiled-layers-hidpi.html
Attachments
Make -[WebView _setCustomBackingScaleFactor:0] properly reset the Page scale factor
(1.63 KB, patch)
2012-04-08 21:45 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-04-08 21:40:56 PDT
Patch forthcoming.
mitz
Comment 2
2012-04-08 21:45:12 PDT
Created
attachment 136182
[details]
Make -[WebView _setCustomBackingScaleFactor:0] properly reset the Page scale factor
mitz
Comment 3
2012-04-08 22:26:20 PDT
Fixed in <
http://trac.webkit.org/r113556
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug