[mac] REGRESSION (r113467): Some canvas tests are failing in WebKit1 when run after compositing/tiled-layers-hidpi.html https://bugs.webkit.org/show_bug.cgi?id=83453

Reviewed by Sam Weinig.

* WebView/WebView.mm:
(-[WebView _setCustomBackingScaleFactor:]): When the scale factor parameter was 0, meaning
no custom scale factor, this method was setting the Page scale factor to 0, and that value
was used by canvas. Changed it to correctly set the Page scale factor back to the device
scale factor.



Canonical link: https://commits.webkit.org/100879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113556 268f45cc-cd09-0410-ab3c-d52691b4dbfc